# arcade-next

./: .gitignore  CLAUDE.md  README.md  arcade_report_ai.html  pyproject.toml
arcade_next/: __init__.py  __main__.py  facts.py  ingestion.py  llm.py  recovery.py  report.py  smells.py
examples/: ARCADE_SELF_ANALYSIS.md  arcade_report.html
